Adding Splash Screen in Android

--- a/03-calculator/android/app/src/main/res/values/strings.xml
+++ b/03-calculator/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">calculator</string>
+    <string name="icon_splash_label">Icon Splash</string>
 </resources>
